# chemsymphony

./: README.md  pyproject.toml
chemsymphony/: __init__.py  __main__.py  canonicalize.py  cli.py  config.py  core.py
chemsymphony/export/: __init__.py  audio_export.py  manifest.py  midi_export.py
chemsymphony/features/: __init__.py  aromaticity.py  atoms.py  bonds.py  branches.py  chains.py  distribution.py  electronic.py  functional_groups.py  global_props.py  graph_counting.py  physicochemical.py  rings.py  smiles_features.py  stereo.py  topology.py
chemsymphony/genres/: __init__.py  acid_techno.py  ambient.py  drum_and_bass.py  dub.py  gabber.py  hip_hop.py  house.py  industrial.py  jazz.py  lo_fi.py  minimal.py  synthwave.py  techno.py  trance.py
chemsymphony/mapping/: __init__.py  bass.py  expression.py  form.py  harmony.py  master.py  melody.py  motifs.py  pads.py  percussion.py
chemsymphony/synthesis/: __init__.py  audio_engine.py  effects.py  midi_builder.py  mixer.py
tests/: test_canonicalize.py  test_cli.py  test_export.py  test_features.py  test_mapping.py  test_synthesis.py
