[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemsymphony"
version = "0.1.0"
description = "Generate unique audio from molecular SMILES strings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Johan HG Natter" }]
keywords = ["chemistry", "smiles", "audio", "music", "midi", "molecules"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "rdkit",
    "midiutil",
    "numpy",
    "scipy",
    "pydub",
    "rich-argparse",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
chemsymphony = "chemsymphony.cli:main"

[tool.setuptools.packages.find]
include = ["chemsymphony*"]
